--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
     "C_Cpp.clang_format_style": "{BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 120}",
     "editor.formatOnSave": true,
     "editor.formatOnType": false,
+    "files.associations": {
+        "type_traits": "c"
+    },
 }
