--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,6 @@
     "C_Cpp.clang_format_style": "{BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 120}",
     "editor.formatOnSave": true,
     "editor.formatOnType": false,
+    "editor.fontFamily": "'Cascadia Code'",
+    "editor.fontLigatures": true,
 }
